Added one more example of view child

--- a/src/app/parent/child/child.component.html
+++ b/src/app/parent/child/child.component.html
@@ -3,7 +3,7 @@
 <label> Name : {{this.name}}</label>
 <br>
 
-<p>{{cName.firstName}} {{cName.lastName}}</p>
+<p>{{cName?.firstName}} {{cName?.lastName}}</p>
 
 
 <table>
