--- a/src/app/parent/parent.component.html
+++ b/src/app/parent/parent.component.html
@@ -16,7 +16,9 @@
         <button (click)="onClickTransferNameToChild()">Submit</button>
     
     </form>
+    <h3>{{response}}</h3>
 </div>
+
 <app-child 
 [name]="name"
 [cName]="pName"
